--- a/views/last_notif.html
+++ b/views/last_notif.html
@@ -28,16 +28,16 @@
 <!-- Navigation bar -->
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/last_notifications">Last Notifications</a>
+        <a class="nav-link active"  href="/last_notifications">Last Notifications</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/notify">Notify Friends</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/settings">Settings</a>
+        <a class="nav-link" href="/settings">Setings</a>
     </li>
 </ul>
 
@@ -50,9 +50,60 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-md-center">
+        <div class="col-8">
+            <div ng-controller="Ctrl_LastNotifications" class="text-center">
+                <br />
+                <h4>Last Notifications</h4>
+                <table class="table table-striped table-dark table-center-text table-sm table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Symbol</th>
+                        <th scope="col">Volume status</th>
+                        <th scope="col">Nb Trades status</th>
+                        <th scope="col">Price status</th>
+
+                    </tr>
+                    </thead>
+                    <tbody ng-repeat="notif in lastNotifications">
+                    <tr>
+                        <td>{{notif.EVC_SYMBOL}}</td>
+                        <td ng-class="{'text-red': notif.EVC_EVOL_VOLUME_ON_PERIOD < 0, 'text-green': notif.EVC_EVOL_VOLUME_ON_PERIOD >= 0}">{{notif.EVC_EVOL_VOLUME_ON_PERIOD_STATUS}}  {{notif.EVC_EVOL_VOLUME_ON_PERIOD}} &percnt;</td>
+                        <td ng-class="{'text-red': notif.EVC_EVOL_NB_TRADES_ON_PERIOD < 0, 'text-green': notif.EVC_EVOL_NB_TRADES_ON_PERIOD >= 0}">{{notif.EVC_EVOL_NB_TRADES_ON_PERIOD_STATUS}}  {{notif.EVC_EVOL_NB_TRADES_ON_PERIOD}} &percnt;</td>
+                        <td ng-class="{'text-red': notif.EVC_EVOL_PRICE_ON_PERIOD < 0, 'text-green': notif.EVC_EVOL_PRICE_ON_PERIOD >= 0}">{{notif.EVC_EVOL_PRICE_ON_PERIOD_STATUS}}  {{notif.EVC_EVOL_PRICE_ON_PERIOD}} &percnt;</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
 </div>
 <script>
     var app = angular.module('myApp', []);
+
+    app.controller('Ctrl_LastNotifications', function($http, $scope, $interval) {
+        $http.get("/GET_last_notifications")
+            .then(function(response) {
+                console.log(response.data);
+                $scope.lastNotifications = response.data;
+            })
+            .catch(function(response) {
+                $scope.lastNotifications = 'ERROR';
+            });
+        $interval(function() {
+            $http.get("/GET_last_notifications")
+                .then(function(response) {
+                    console.log(response.data);
+                    $scope.lastNotifications = response.data;
+                })
+                .catch(function(response) {
+                    $scope.lastNotifications = 'ERROR';
+                });
+        },60000);
+    });
+
 
     /* DATE CONTROLLER */
     app.controller('Ctrl_Date', function($scope, $interval) {
@@ -74,7 +125,6 @@
 
         },1000);
     });
-
 
 </script>
 </body>
