--- a/views/settings.html
+++ b/views/settings.html
@@ -31,7 +31,10 @@
         <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/notify">Notify Friends</a>
+        <a class="nav-link" href="/notify">Last Notifications</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/last_notifications">Notify Friends</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="/settings">Setings</a>
