--- a/views/settings.html
+++ b/views/settings.html
@@ -31,10 +31,7 @@
         <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/notify">Last Notifications</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/last_notifications">Notify Friends</a>
+        <a class="nav-link" href="/last_notifications">Last Notifications</a>
     </li>
     <li class="nav-item">
         <a class="nav-link active" href="/settings">Setings</a>
@@ -50,9 +47,65 @@
             </div>
         </div>
     </div>
+    <div class="row justify-content-md-center">
+        <div class="col-8">
+            <br /><br />
+            <table ng-controller="Ctrl_Settings" class="table table-striped table-dark table-sm">
+                <thead>
+                <tr>
+                    <th scope="col">Algorithme</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Value</th>
+                    <th scope="col"></th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="trigger in myTriggers">
+                <tr>
+                    <td>{{trigger.PMT_ALGO}}</td>
+                    <td>{{trigger.PMT_NAME}}</td>
+                    <td>{{trigger.PMT_DESCR}}</td>
+                    <td>
+                        <input ng-attr-id="{{trigger.PMT_NAME}}" type="text" ng-model="trigger.PMT_VALUE" required ng-trim="true">
+                    </td>
+                    <td><button ng-attr-id="{{trigger.PMT_ID}}" type="button" class="btn btn-success btn-sm" ng-click="changeSettingValue(trigger.PMT_ID, trigger.PMT_VALUE)">Submit</button></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 <script>
     var app = angular.module('myApp', []);
+
+
+    // CRON TASKS CONTROLLER
+    app.controller('Ctrl_Settings', function($scope, $http) {
+        $http.get("GET_settings")
+            .then(function(response) {
+                $scope.myTriggers = response.data;
+            }).catch(function(response) {
+            $scope.myTriggers = 'Erreur';
+        });
+
+        $scope.changeSettingValue = function(id, value) {
+            console.log(id+'  '+value);
+            let data = {settings_id: id, settings_value: value};
+            $http({
+                method: 'POST',
+                url: 'POST_settings',
+                headers: {'Content-Type': 'application/json'},
+                data: data
+            }).then(function (response) {
+                $http.get("GET_settings")
+                    .then(function(response) {
+                        $scope.myTriggers = response.data;
+                    }).catch(function(response) {
+                    $scope.myTriggers = 'Erreur';
+                });
+            });
+        }
+    });
 
     /* DATE CONTROLLER */
     app.controller('Ctrl_Date', function($scope, $interval) {
