--- a/views/settings.html
+++ b/views/settings.html
@@ -48,16 +48,17 @@
         </div>
     </div>
     <div class="row justify-content-md-center">
-        <div class="col-8">
+        <div class="col-10">
             <br /><br />
+            <h3>Edition des paramètres</h3>
             <table ng-controller="Ctrl_Settings" class="table table-striped table-dark table-sm">
                 <thead>
                 <tr>
-                    <th scope="col">Algorithme</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Value</th>
-                    <th scope="col"></th>
+                    <th scope="col-1">Algorithme</th>
+                    <th scope="col-1">Name</th>
+                    <th scope="col-5">Description</th>
+                    <th scope="col-1">Value</th>
+                    <th scope="col-1"></th>
                 </tr>
                 </thead>
                 <tbody ng-repeat="trigger in myTriggers">
