--- a/views/pairs.html
+++ b/views/pairs.html
@@ -28,16 +28,16 @@
 <!-- Navigation bar -->
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="nav-link active" href="/">Home</a>
+        <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/last_notifications">Last Notifications</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/pairs">Pairs</a>
+        <a class="nav-link active" href="/pairs">Pairs</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/settings">Settings</a>
+        <a class="nav-link" href="/settings">Setings</a>
     </li>
 </ul>
 
@@ -46,13 +46,70 @@
     <div class="row justify-content-md-center">
         <div class="col">
             <div ng-controller="Ctrl_Date" class="text-center">
-                {{ today | date }} - Refresh data in {{remainingTimeBeforeRefresh}} seconds
+                {{ today | date }}
             </div>
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-5">
+            <br /><br />
+            <h3>Activer / D&eacute;sactiver les paires</h3>
+            <table ng-controller="Ctrl_Pairs" class="table table-striped table-dark table-sm">
+                <thead>
+                <tr>
+                    <th scope="col-1">Symbol</th>
+                    <th scope="col-1">BAse asset</th>
+                    <th scope="col-5">Quote asset</th>
+                    <th scope="col-1">Active</th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="pair in myPairs">
+                    <tr>
+                        <td>{{pair.EXI_SYMBOL}}</td>
+                        <td>{{pair.EXI_BASE_ASSET}}</td>
+                        <td>{{pair.EXI_QUOTE_ASSET}}</td>
+                        <td>
+                            <div ng-if="pair.EXI_ACTIVATED == 1">
+                                <button ng-attr-id="pair.EXI_ID" type="button" class="btn btn-danger btn-sm" ng-click="changePairStatus(pair.EXI_ID, pair.EXI_ACTIVATED)">D&eacute;sactiver</button>
+                            </div>
+                            <div ng-if="pair.EXI_ACTIVATED == 0">
+                                <button ng-attr-id="pair.EXI_ID" type="button" class="btn btn-success btn-sm" ng-click="changePairStatus(pair.EXI_ID, pair.EXI_ACTIVATED)">Activer</button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
 <script>
     var app = angular.module('myApp', []);
+
+    app.controller('Ctrl_Pairs', function($scope, $http) {
+        $http.get("GET_pair_listPairs")
+            .then(function(response) {
+                $scope.myPairs = response.data;
+            }).catch(function(response) {
+            $scope.myPairs = 'Erreur';
+        });
+
+        $scope.changePairStatus = function(id, active) {
+            let data = {pair_id: id, pair_active: active};
+            $http({
+                method: 'POST',
+                url: 'POST_pair_changePairStatus',
+                headers: {'Content-Type': 'application/json'},
+                data: data
+            }).then(function (response) {
+                $http.get("GET_pair_listPairs")
+                    .then(function(response) {
+                        $scope.myPairs = response.data;
+                    }).catch(function(response) {
+                    $scope.myPairs = 'Erreur';
+                });
+            });
+        }
+    });
 
     /* DATE CONTROLLER */
     app.controller('Ctrl_Date', function($scope, $interval) {
@@ -65,13 +122,6 @@
                 + currentdate.getMinutes() + ":"
                 + currentdate.getSeconds();
             $scope.today = datetime;
-
-            // init
-            if($scope.remainingTimeBeforeRefresh === 0 || !$scope.remainingTimeBeforeRefresh){
-                $scope.remainingTimeBeforeRefresh = 60;
-            }
-            $scope.remainingTimeBeforeRefresh--;
-
         },1000);
     });
 
