--- a/views/settings.html
+++ b/views/settings.html
@@ -34,6 +34,9 @@
         <a class="nav-link" href="/last_notifications">Last Notifications</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="/pairs">Pairs</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link active" href="/settings">Setings</a>
     </li>
 </ul>
