--- a/views/home.html
+++ b/views/home.html
@@ -51,6 +51,32 @@
         </div>
     </div>
 </div>
+<div class="row justify-content-md-center">
+    <div class="col-9">
+        <div ng-controller="Ctrl_LastNotifications" class="text-center">
+            <h4>Find Notifications :</h4><br />
+            <table class="table table-striped table-dark table-center-text table-sm table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Symbol</th>
+                    <th scope="col">Volume Status</th>
+                    <th scope="col">Volume Evol</th>
+                    <th scope="col">Nb Trades Status</th>
+                    <th scope="col">Nb Trades Evol</th>
+                    <th scope="col">Price Status</th>
+                    <th scope="col">Price Evol</th>
+                    <th scope="col">Nb Periods</th>
+                </tr>
+                </thead>
+                <tbody ng-repeat="notif in lastNotifications">
+                <tr>
+
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 <script>
     var app = angular.module('myApp', []);
 
