--- a/views/pairs.html
+++ b/views/pairs.html
@@ -31,6 +31,9 @@
         <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
+        <a class="nav-link" href="/candles">Candles</a>
+    </li>
+    <li class="nav-item">
         <a class="nav-link" href="/last_notifications">Last Notifications</a>
     </li>
     <li class="nav-item">
